# bazel-example

./: .bazelrc  .gitignore  README.md  WORKSPACE
bazel/: deps.bzl  index.bzl
bazel/js/: BUILD.bazel  deps.bzl  index.bzl  package.json
bazel/js/babel/: BUILD.bazel  package-lock.json  package.json
bazel/js/typescript/: package-lock.json  package.json  tsconfig.json
example/generate_file/: BUILD  generateFile.js  index.bzl
example/generate_file/demo/: BUILD
js/module/: BUILD.bazel  index.js
js/module_example/: BUILD.bazel  index.js
ownership/: BUILD  combineOwners.js  generateOwnersJson.js  index.bzl
ownership/demo/: BUILD
ownership/demo/one/: BUILD
ownership/demo/two/: BUILD
typescript/hello_world/: BUILD.bazel  index.ts  tsconfig.json
typescript/shared_pkg/: BUILD.bazel  package.json  tsconfig.json
typescript/shared_pkg/src/: index.ts
